Додав serviceAccountKey.json у .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 node_modules/
 /my-react-app/volonter-27646-firebase-adminsdk-fbsvc-70dbcf5fd0.json
+echo "my-react-app/serviceAccountKey.json" >> .gitignore
